# HR-Agent

./: .gitignore  .mcp-config.json  ALL_PYLANCE_ERRORS_FIXED.md  AZURE_SETUP_GUIDE.md  CONTRIBUTING.md  IMPORT_ERRORS_FIXED.md  LANGGRAPH_MCP_SUMMARY.md  LICENSE  MCP_SERVER_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_3_GUIDE.md  QUICKSTART_AZURE.md  QUICK_REFERENCE.md  README.md  VSCODE_SETUP.md  WORKFLOW_QUICKSTART.md  azure-resources.txt  quickstart-mcp.sh  techno_thon_complete_guide.md
.github/agents/: hr-onboarding-orchestrator.agent.md  meta-agentic-project-scaffold.agent.md
.github/config/: orchestrator-workflow.yml
.github/instructions/: skill-integration.instructions.md  task-workflow-automation.instructions.md
.github/prompts/: agentic-workflow-executor.prompt.md  execute-phase-1.prompt.md  execute-phase-2.prompt.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  README_MCP.md  function_app.py  mcp_server.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  coordinator.py  graph.py  hr_agent.py  it_agent.py  manager_agent.py  state.py  training_agent.py
backend/integrations/: cosmos.py  cosmos_db.py  email.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_cosmos.py  test_email.py  test_integration.py  test_mcp_server.py
backend/tests/test_agents/: test_coordinator.py  test_specialist_agents.py
scripts/: quick-setup-azure.sh  setup-azure.sh  start-local.sh  sync-env.sh  test-azure-setup.sh
